teamfortress2-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: teamfortress2
  name: teamfortress2
spec:
  ports:
  - name: "27015"
    port: 27015
    targetPort: 27015
  - name: 27015-udp
    port: 27015
    protocol: UDP
    targetPort: 27015
  selector:
    io.kompose.service: teamfortress2
status:
  loadBalancer: {}
